--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body>
 <header class="header_index">
-    <div class="header__box">
-        <h1 class="header__box_title"><a href="./">Foodies</a></h1>
+    <div class="header_box">
+        <h1 class="header_title"><a href="./">Foodies</a></h1>
         <nav class="pc_header">
-            <ul class="header__box_menu">
-                <li class="header__box_menu_list"><a href="about_us.html">About Us</a></li>
-                <li class="header__box_menu_list"><a href="recipes.html">Recipes</a></li>
-                <li class="header__box_menu_list"><a href="contact.html">Contact</a></li>
+            <ul class="header_menu">
+                <li class="header_menu_list"><a href="about_us.html">About Us</a></li>
+                <li class="header_menu_list"><a href="recipes.html">Recipes</a></li>
+                <li class="header_menu_list"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div id="nav-wrapper" class="nav-wrapper sp_header">
@@ -45,28 +45,28 @@
             <div class="black-bg" id="js-black-bg"></div>
         </div>
     </div>
-    <h2 class="header__main_title">What's on the menu today?</h2>
-    <div class="header__main_button"><a href="recipes.html">Find a recipe</a></div>
+    <h2 class="header_main_title">What's on the menu today?</h2>
+    <div class="header_main_button"><a href="recipes.html">Find a recipe</a></div>
 </header>
 <main>
-    <section class="contents__box">
-        <h3 class="contents__box_title">Welcome</h3>
-        <p class="contents__box_des">Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
+    <section class="contents_box">
+        <h3 class="contents_title index_contents_title">Welcome</h3>
+        <p class="contents_text">Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
             guides, and meal plans, drawing over 15 million readers each month from around the world. </p>
-        <p class="contents__box_des">We’re supported by a group of recipe developers, food writers, recipe and product
+        <p class="contents_text">We’re supported by a group of recipe developers, food writers, recipe and product
             testers, photographers, and other creative professionals.</p>
-        <p class="contents__box_link"><a href="about_us.html">Learn More...</a></p>
+        <p class="contents_text_link"><a href="about_us.html">Learn More...</a></p>
     </section>
-    <section class="contents__box">
-        <h3 class="contents__box_title">Newest Recipes</h3>
-        <ul class="contents__box_list">
+    <section class="contents_box">
+        <h3 class="contents_title index_contents_title">Newest Recipes</h3>
+        <ul class="recipe_list">
             <li>
                 <a href="recipe_detail.html">
                     <dl>
-                        <dt class="recipe__box_image"><img src="./images/recipes/recipe1.png" alt="Thai Red Curry"></dt>
-                        <dt class="recipe__box_category">Asian Food</dt>
-                        <dt class="recipe__box_title">Thai Red Curry</dt>
-                        <dd class="recipe__box_des">
+                        <dt class="recipe_image"><img src="./images/recipes/recipe1.png" alt="Thai Red Curry"></dt>
+                        <dt class="recipe_category">Asian Food</dt>
+                        <dt class="recipe_title">Thai Red Curry</dt>
+                        <dd class="recipe_des">
                             Forget ordering takeaway and make your own Thai red curry at home. This classic dish takes
                             just 15 minutes to
                             prep and it's bursting with flavour.
@@ -77,11 +77,11 @@
             <li>
                 <a href="recipe_detail.html">
                     <dl>
-                        <dt class="recipe__box_image"><img src="./images/recipes/recipe2.png"
+                        <dt class="recipe_image"><img src="./images/recipes/recipe2.png"
                                                            alt="Chocolate Chip Cookies"></dt>
-                        <dt class="recipe__box_category">Sweets</dt>
-                        <dt class="recipe__box_title">Chocolate Chip Cookies</dt>
-                        <dd class="recipe__box_des">
+                        <dt class="recipe_category">Sweets</dt>
+                        <dt class="recipe_title">Chocolate Chip Cookies</dt>
+                        <dd class="recipe_des">
                             This is the best chocolate chip cookies recipe ever! No funny ingredients, no chilling time,
                             etc.
                         </dd>
@@ -90,10 +90,10 @@
             </li>
             <li>
                 <dl>
-                    <dt class="recipe__box_image"><img src="./images/recipes/recipe3.png" alt="Bolognese"></dt>
-                    <dt class="recipe__box_category">Pasta</dt>
-                    <dt class="recipe__box_title">Bolognese</dt>
-                    <dd class="recipe__box_des">
+                    <dt class="recipe_image"><img src="./images/recipes/recipe3.png" alt="Bolognese"></dt>
+                    <dt class="recipe_category">Pasta</dt>
+                    <dt class="recipe_title">Bolognese</dt>
+                    <dd class="recipe_des">
                         Hearty and comforting, this meaty, easy bolognese sauce recipe takes less time to make than it
                         does to disappear into hungry tummies.
                     </dd>
@@ -101,10 +101,10 @@
             </li>
             <li>
                 <dl>
-                    <dt class="recipe__box_image"><img src="./images/recipes/recipe4.png" alt="Best Humburger"></dt>
-                    <dt class="recipe__box_category">Fast Food</dt>
-                    <dt class="recipe__box_title">Best Humburger</dt>
-                    <dd class="recipe__box_des">
+                    <dt class="recipe_image"><img src="./images/recipes/recipe4.png" alt="Best Humburger"></dt>
+                    <dt class="recipe_category">Fast Food</dt>
+                    <dt class="recipe_title">Best Humburger</dt>
+                    <dd class="recipe_des">
                         Best Hamburger Patty Recipe – Thick or thin, made on the grill or stovetop, this is the best
                         recipe for perfect hamburger patties every time!
                     </dd>
@@ -112,11 +112,11 @@
             </li>
             <li>
                 <dl>
-                    <dt class="recipe__box_image"><img src="./images/recipes/recipe5.png"
+                    <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
                                                        alt="Salmon with Creamy Spinachi"></dt>
-                    <dt class="recipe__box_category">Seafood</dt>
-                    <dt class="recipe__box_title">Salmon with Creamy Spinachi</dt>
-                    <dd class="recipe__box_des">
+                    <dt class="recipe_category">Seafood</dt>
+                    <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
+                    <dd class="recipe_des">
                         This pan seared salmon with creamy spinach recipe is so delicious your entire family will fall
                         in love.
                     </dd>
@@ -124,11 +124,11 @@
             </li>
             <li>
                 <dl>
-                    <dt class="recipe__box_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
+                    <dt class="recipe_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
                     </dt>
-                    <dt class="recipe__box_category">Chicken</dt>
-                    <dt class="recipe__box_title">Baked Chicken Wings</dt>
-                    <dd class="recipe__box_des">
+                    <dt class="recipe_category">Chicken</dt>
+                    <dt class="recipe_title">Baked Chicken Wings</dt>
+                    <dd class="recipe_des">
                         Chicken Wings are a game day staple! This baked wings recipe has the most amazing seasoning
                         consisting of paprika, garlic, salt and pepper.
                     </dd>
@@ -136,10 +136,10 @@
             </li>
             <li>
                 <dl>
-                    <dt class="recipe__box_image"><img src="./images/recipes/recipe7.png" alt="Margherita Pizza"></dt>
-                    <dt class="recipe__box_category">Fast Food</dt>
-                    <dt class="recipe__box_title">Margherita Pizza</dt>
-                    <dd class="recipe__box_des">
+                    <dt class="recipe_image"><img src="./images/recipes/recipe7.png" alt="Margherita Pizza"></dt>
+                    <dt class="recipe_category">Fast Food</dt>
+                    <dt class="recipe_title">Margherita Pizza</dt>
+                    <dd class="recipe_des">
                         This margherita pizza recipe tastes like a woodfired pie from Italy! It stars a flavor-popping
                         pizza sauce and perfectly chewy pizza crust.
                     </dd>
@@ -147,10 +147,10 @@
             </li>
             <li>
                 <dl>
-                    <dt class="recipe__box_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
-                    <dt class="recipe__box_category">Sweets</dt>
-                    <dt class="recipe__box_title">Apple Pie</dt>
-                    <dd class="recipe__box_des">
+                    <dt class="recipe_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
+                    <dt class="recipe_category">Sweets</dt>
+                    <dt class="recipe_title">Apple Pie</dt>
+                    <dd class="recipe_des">
                         This is absolutely the best homemade apple pie you'll ever make! It has a flaky, buttery crust
                         and a tender, lightly-spiced apple pie filling.
                     </dd>
