--- a/recipes.html
+++ b/recipes.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Foodies</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,30 +12,63 @@
   <link rel="stylesheet" href="css/recipes.css">
 </head>
 <body>
-<header class="header_recipes">
-  <div class="header__box">
-    <h1 class="header__box_title"><a href="./">Foodies</a></h1>
-    <nav>
-      <ul class="header__box_menu">
-        <li class="header__box_menu_list"><a href="about_us.html">About Us</a></li>
-        <li class="header__box_menu_list"><a href="recipes.html">Recipes</a></li>
-        <li class="header__box_menu_list"><a href="contact.html">Contact</a></li>
+<header class="header_about_us">
+  <div class="header_box">
+    <h1 class="header_title"><a href="./">Foodies</a></h1>
+    <nav class="pc_header">
+      <ul class="header_menu">
+        <li class="header_menu_list"><a href="about_us.html">About Us</a></li>
+        <li class="header_menu_list"><a href="recipes.html">Recipes</a></li>
+        <li class="header_menu_list"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+    <div id="nav-wrapper" class="nav-wrapper sp_header">
+      <div class="hamburger" id="js-hamburger">
+        <span class="hamburger__line hamburger__line--1"></span>
+        <span class="hamburger__line hamburger__line--2"></span>
+        <span class="hamburger__line hamburger__line--3"></span>
+      </div>
+      <nav class="sp-nav">
+        <ul class="sp_menu">
+          <li><a href="about_us.html">About Us</a></li>
+          <li><a href="recipes.html">Recipes</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <ul class="footer_sns">
+          <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
+          <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
+                                                                       alt="Facebook"></a></li>
+          <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
+                                                                        alt="Instagram"></a></li>
+        </ul>
+      </nav>
+      <div class="black-bg" id="js-black-bg"></div>
+    </div>
   </div>
-  <h2 class="header__main_title sub_menu_title">Recipes</h2>
+  <h2 class="header_main_title sub_menu_title">Recipes</h2>
 </header>
 <main>
-  <section class="contents__box">
-    <h3 class="contents__box_title">Cozy Dishes for Winter</h3>
-    <ul class="contents__box_list">
+  <section class="contents_box carousel_box">
+    <div class="splide">
+      <div class="splide__track">
+        <ul class="splide__list">
+          <li class="splide__slide"><a href="recipe_detail.html"><img src="images/slide_1.png" alt="Best Genovese Source"></a></li>
+          <li class="splide__slide"><a href="recipe_detail.html"><img src="images/slide_1.png" alt=""></a></li>
+          <li class="splide__slide"><a href="recipe_detail.html"><img src="images/slide_1.png" alt=""></a></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section class="contents_box">
+    <h3 class="contents_title recipes_contents_title">Cozy Dishes for Winter</h3>
+    <ul class="recipe_list">
       <li>
-        <a href="">
+        <a href="recipe_detail.html">
           <dl>
-            <dt class="recipe__box_image"><img src="./images/recipes/recipe1.png" alt="Thai Red Curry"></dt>
-            <dt class="recipe__box_category">Asian Food</dt>
-            <dt class="recipe__box_title">Thai Red Curry</dt>
-            <dd class="recipe__box_des">
+            <dt class="recipe_image"><img src="./images/recipes/recipe1.png" alt="Thai Red Curry"></dt>
+            <dt class="recipe_category">Asian Food</dt>
+            <dt class="recipe_title">Thai Red Curry</dt>
+            <dd class="recipe_des">
               Forget ordering takeaway and make your own Thai red curry at home. This classic dish takes
               just 15 minutes to
               prep and it's bursting with flavour.
@@ -43,13 +77,13 @@
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="recipe_detail.html">
           <dl>
-            <dt class="recipe__box_image"><img src="./images/recipes/recipe2.png"
-                                               alt="Chocolate Chip Cookies"></dt>
-            <dt class="recipe__box_category">Sweets</dt>
-            <dt class="recipe__box_title">Chocolate Chip Cookies</dt>
-            <dd class="recipe__box_des">
+            <dt class="recipe_image"><img src="./images/recipes/recipe2.png"
+                                          alt="Chocolate Chip Cookies"></dt>
+            <dt class="recipe_category">Sweets</dt>
+            <dt class="recipe_title">Chocolate Chip Cookies</dt>
+            <dd class="recipe_des">
               This is the best chocolate chip cookies recipe ever! No funny ingredients, no chilling time,
               etc.
             </dd>
@@ -58,10 +92,10 @@
       </li>
       <li>
         <dl>
-          <dt class="recipe__box_image"><img src="./images/recipes/recipe3.png" alt="Bolognese"></dt>
-          <dt class="recipe__box_category">Pasta</dt>
-          <dt class="recipe__box_title">Bolognese</dt>
-          <dd class="recipe__box_des">
+          <dt class="recipe_image"><img src="./images/recipes/recipe3.png" alt="Bolognese"></dt>
+          <dt class="recipe_category">Pasta</dt>
+          <dt class="recipe_title">Bolognese</dt>
+          <dd class="recipe_des">
             Hearty and comforting, this meaty, easy bolognese sauce recipe takes less time to make than it
             does to disappear into hungry tummies.
           </dd>
@@ -69,10 +103,10 @@
       </li>
       <li>
         <dl>
-          <dt class="recipe__box_image"><img src="./images/recipes/recipe4.png" alt="Best Humburger"></dt>
-          <dt class="recipe__box_category">Fast Food</dt>
-          <dt class="recipe__box_title">Best Humburger</dt>
-          <dd class="recipe__box_des">
+          <dt class="recipe_image"><img src="./images/recipes/recipe4.png" alt="Best Humburger"></dt>
+          <dt class="recipe_category">Fast Food</dt>
+          <dt class="recipe_title">Best Humburger</dt>
+          <dd class="recipe_des">
             Best Hamburger Patty Recipe – Thick or thin, made on the grill or stovetop, this is the best
             recipe for perfect hamburger patties every time!
           </dd>
@@ -80,166 +114,103 @@
       </li>
     </ul>
   </section>
-  <section class="contents__box">
-    <h3 class="contents__box_title">Cozy Dishes for Winter</h3>
-    <ul class="contents__box_list">
-      <li>
-        <a href="">
-          <dl>
-            <dt class="recipe__box_image"><img src="./images/recipes/recipe1.png" alt="Thai Red Curry"></dt>
-            <dt class="recipe__box_category">Asian Food</dt>
-            <dt class="recipe__box_title">Thai Red Curry</dt>
-            <dd class="recipe__box_des">
-              Forget ordering takeaway and make your own Thai red curry at home. This classic dish takes
-              just 15 minutes to
-              prep and it's bursting with flavour.
-            </dd>
-          </dl>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <dl>
-            <dt class="recipe__box_image"><img src="./images/recipes/recipe2.png"
-                                               alt="Chocolate Chip Cookies"></dt>
-            <dt class="recipe__box_category">Sweets</dt>
-            <dt class="recipe__box_title">Chocolate Chip Cookies</dt>
-            <dd class="recipe__box_des">
-              This is the best chocolate chip cookies recipe ever! No funny ingredients, no chilling time,
-              etc.
-            </dd>
-          </dl>
-        </a>
-      </li>
+  <section class="contents_box">
+    <h3 class="contents_title recipes_contents_title">Cozy Dishes for Winter</h3>
+    <ul class="recipe_list">
       <li>
         <dl>
-          <dt class="recipe__box_image"><img src="./images/recipes/recipe3.png" alt="Bolognese"></dt>
-          <dt class="recipe__box_category">Pasta</dt>
-          <dt class="recipe__box_title">Bolognese</dt>
-          <dd class="recipe__box_des">
-            Hearty and comforting, this meaty, easy bolognese sauce recipe takes less time to make than it
-            does to disappear into hungry tummies.
+          <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
+                                        alt="Salmon with Creamy Spinachi"></dt>
+          <dt class="recipe_category">Seafood</dt>
+          <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
+          <dd class="recipe_des">
+            This pan seared salmon with creamy spinach recipe is so delicious your entire family will fall
+            in love.
           </dd>
         </dl>
       </li>
       <li>
         <dl>
-          <dt class="recipe__box_image"><img src="./images/recipes/recipe4.png" alt="Best Humburger"></dt>
-          <dt class="recipe__box_category">Fast Food</dt>
-          <dt class="recipe__box_title">Best Humburger</dt>
-          <dd class="recipe__box_des">
-            Best Hamburger Patty Recipe – Thick or thin, made on the grill or stovetop, this is the best
-            recipe for perfect hamburger patties every time!
+          <dt class="recipe_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
+          </dt>
+          <dt class="recipe_category">Chicken</dt>
+          <dt class="recipe_title">Baked Chicken Wings</dt>
+          <dd class="recipe_des">
+            Chicken Wings are a game day staple! This baked wings recipe has the most amazing seasoning
+            consisting of paprika, garlic, salt and pepper.
+          </dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt class="recipe_image"><img src="./images/recipes/recipe7.png" alt="Margherita Pizza"></dt>
+          <dt class="recipe_category">Fast Food</dt>
+          <dt class="recipe_title">Margherita Pizza</dt>
+          <dd class="recipe_des">
+            This margherita pizza recipe tastes like a woodfired pie from Italy! It stars a flavor-popping
+            pizza sauce and perfectly chewy pizza crust.
+          </dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt class="recipe_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
+          <dt class="recipe_category">Sweets</dt>
+          <dt class="recipe_title">Apple Pie</dt>
+          <dd class="recipe_des">
+            This is absolutely the best homemade apple pie you'll ever make! It has a flaky, buttery crust
+            and a tender, lightly-spiced apple pie filling.
           </dd>
         </dl>
       </li>
     </ul>
   </section>
-  <section class="contents__box">
-    <h3 class="contents__box_title">Cozy Dishes for Winter</h3>
-    <ul class="contents__box_list">
-      <li>
-        <a href="">
-          <dl>
-            <dt class="recipe__box_image"><img src="./images/recipes/recipe1.png" alt="Thai Red Curry"></dt>
-            <dt class="recipe__box_category">Asian Food</dt>
-            <dt class="recipe__box_title">Thai Red Curry</dt>
-            <dd class="recipe__box_des">
-              Forget ordering takeaway and make your own Thai red curry at home. This classic dish takes
-              just 15 minutes to
-              prep and it's bursting with flavour.
-            </dd>
-          </dl>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <dl>
-            <dt class="recipe__box_image"><img src="./images/recipes/recipe2.png"
-                                               alt="Chocolate Chip Cookies"></dt>
-            <dt class="recipe__box_category">Sweets</dt>
-            <dt class="recipe__box_title">Chocolate Chip Cookies</dt>
-            <dd class="recipe__box_des">
-              This is the best chocolate chip cookies recipe ever! No funny ingredients, no chilling time,
-              etc.
-            </dd>
-          </dl>
-        </a>
-      </li>
+  <section class="contents_box">
+    <h3 class="contents_title recipes_contents_title">Cozy Dishes for Winter</h3>
+    <ul class="recipe_list">
       <li>
         <dl>
-          <dt class="recipe__box_image"><img src="./images/recipes/recipe3.png" alt="Bolognese"></dt>
-          <dt class="recipe__box_category">Pasta</dt>
-          <dt class="recipe__box_title">Bolognese</dt>
-          <dd class="recipe__box_des">
-            Hearty and comforting, this meaty, easy bolognese sauce recipe takes less time to make than it
-            does to disappear into hungry tummies.
+          <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
+                                        alt="Salmon with Creamy Spinachi"></dt>
+          <dt class="recipe_category">Seafood</dt>
+          <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
+          <dd class="recipe_des">
+            This pan seared salmon with creamy spinach recipe is so delicious your entire family will fall
+            in love.
           </dd>
         </dl>
       </li>
       <li>
         <dl>
-          <dt class="recipe__box_image"><img src="./images/recipes/recipe4.png" alt="Best Humburger"></dt>
-          <dt class="recipe__box_category">Fast Food</dt>
-          <dt class="recipe__box_title">Best Humburger</dt>
-          <dd class="recipe__box_des">
-            Best Hamburger Patty Recipe – Thick or thin, made on the grill or stovetop, this is the best
-            recipe for perfect hamburger patties every time!
-          </dd>
-        </dl>
-      </li>
-    </ul>
-  </section>
-  <section class="contents__box">
-    <h3 class="contents__box_title">Cozy Dishes for Winter</h3>
-    <ul class="contents__box_list">
-      <li>
-        <a href="">
-          <dl>
-            <dt class="recipe__box_image"><img src="./images/recipes/recipe1.png" alt="Thai Red Curry"></dt>
-            <dt class="recipe__box_category">Asian Food</dt>
-            <dt class="recipe__box_title">Thai Red Curry</dt>
-            <dd class="recipe__box_des">
-              Forget ordering takeaway and make your own Thai red curry at home. This classic dish takes
-              just 15 minutes to
-              prep and it's bursting with flavour.
-            </dd>
-          </dl>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <dl>
-            <dt class="recipe__box_image"><img src="./images/recipes/recipe2.png"
-                                               alt="Chocolate Chip Cookies"></dt>
-            <dt class="recipe__box_category">Sweets</dt>
-            <dt class="recipe__box_title">Chocolate Chip Cookies</dt>
-            <dd class="recipe__box_des">
-              This is the best chocolate chip cookies recipe ever! No funny ingredients, no chilling time,
-              etc.
-            </dd>
-          </dl>
-        </a>
-      </li>
-      <li>
-        <dl>
-          <dt class="recipe__box_image"><img src="./images/recipes/recipe3.png" alt="Bolognese"></dt>
-          <dt class="recipe__box_category">Pasta</dt>
-          <dt class="recipe__box_title">Bolognese</dt>
-          <dd class="recipe__box_des">
-            Hearty and comforting, this meaty, easy bolognese sauce recipe takes less time to make than it
-            does to disappear into hungry tummies.
+          <dt class="recipe_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
+          </dt>
+          <dt class="recipe_category">Chicken</dt>
+          <dt class="recipe_title">Baked Chicken Wings</dt>
+          <dd class="recipe_des">
+            Chicken Wings are a game day staple! This baked wings recipe has the most amazing seasoning
+            consisting of paprika, garlic, salt and pepper.
           </dd>
         </dl>
       </li>
       <li>
         <dl>
-          <dt class="recipe__box_image"><img src="./images/recipes/recipe4.png" alt="Best Humburger"></dt>
-          <dt class="recipe__box_category">Fast Food</dt>
-          <dt class="recipe__box_title">Best Humburger</dt>
-          <dd class="recipe__box_des">
-            Best Hamburger Patty Recipe – Thick or thin, made on the grill or stovetop, this is the best
-            recipe for perfect hamburger patties every time!
+          <dt class="recipe_image"><img src="./images/recipes/recipe7.png" alt="Margherita Pizza"></dt>
+          <dt class="recipe_category">Fast Food</dt>
+          <dt class="recipe_title">Margherita Pizza</dt>
+          <dd class="recipe_des">
+            This margherita pizza recipe tastes like a woodfired pie from Italy! It stars a flavor-popping
+            pizza sauce and perfectly chewy pizza crust.
+          </dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt class="recipe_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
+          <dt class="recipe_category">Sweets</dt>
+          <dt class="recipe_title">Apple Pie</dt>
+          <dd class="recipe_des">
+            This is absolutely the best homemade apple pie you'll ever make! It has a flaky, buttery crust
+            and a tender, lightly-spiced apple pie filling.
           </dd>
         </dl>
       </li>
@@ -268,5 +239,30 @@
   </div>
   <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
 </footer>
+<script>
+  window.onload = function () {
+    //  読み込みが完了したら実行したい処理を記述
+    const nav = document.getElementById('nav-wrapper');
+    const hamburger = document.getElementById('js-hamburger');
+    const blackBg = document.getElementById('js-black-bg');
+    hamburger.addEventListener('click', function () {
+      nav.classList.toggle('open');
+    });
+// 黒背景をクリックしたら
+    blackBg.addEventListener('click', function () {
+      nav.classList.remove('open');
+    });
+  };
+</script>
+<script src="js/splide.min.js"></script>
+<script>
+  document.addEventListener( 'DOMContentLoaded', function() {
+    const splide = new Splide( '.splide' ,{
+      type   : 'loop',
+      autoplay: true,
+    });
+    splide.mount();
+  } );
+</script>
 </body>
 </html>
